@@ -103,6 +103,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <argLine>--enable-native-access=ALL-UNNAMED</argLine>
                     <environmentVariables>
                         <GODOT_BIN>${env.GODOT_BIN}</GODOT_BIN>
                         <GODOT_JAVA_CLASSPATH>${env.GODOT_JAVA_CLASSPATH}</GODOT_JAVA_CLASSPATH>
